# Mindline

./: .env.example  .gitignore  README.md
backend/: main.py  pyproject.toml
backend/agent/: agents.py
backend/alembic/: env.py
backend/alembic/versions/: 0fee0d96d50d_更新user_profiles表_新增字段_约束输入.py  1d20baff3943_初始化数据表.py  b4c6fd88706e_更新daily_tasks表_修复索引.py  bf6b342f5890_更新daily_tasks表_新增task_date字段.py  f21fdda53347_更新users表_更改avatar_url大小.py
backend/config/: config.py  db_config.py
backend/database/: database.py
backend/database/crud/: learning.py  users.py
backend/database/models/: Base.py  __init__.py  agent.py  branchs.py  conversations.py  files.py  learning.py  notes.py  reviews.py  users.py
backend/routers/: learning.py  users.py
backend/schemas/: learning.py  users.py
backend/services/: learning_service.py  user_service.py
backend/utils/: auth.py  response.py  security.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: client.ts
frontend/src/data/: mockMindline.ts
frontend/src/layouts/: AppLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: mindline.ts
frontend/src/styles/: theme.css
frontend/src/types/: mindline.ts
frontend/src/views/: AuthView.vue  BranchesView.vue  ChatView.vue  DashboardView.vue  EmotionView.vue  GoalsView.vue  NotesView.vue  ReviewsView.vue  SessionsView.vue  TasksView.vue
