[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic==1.13.2",
    "dotenv>=0.9.9",
    "fastapi>=0.138.0",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.13.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.49.0",
]
